--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="immagine-londra-1">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="immagine-londra-1">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="immagine-londra-1">
+        <hr>
+    </header>
+
+    <!-- Main -->
+
+    <!-- Footer -->
 </body>
 </html>
