--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Main -->
     <main>
-        <h1>Le mie spese</h1>
+        <h3>Le mie spese</h3>
         <table>
             <thead>
                 <tr>
@@ -55,6 +55,37 @@
                 </tr>
             </tfoot>
         </table>
+        <hr>
+
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &cross;</li>
+            <li>Visitare greenwich &check;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+        </ul>
+        <hr>
+
+        <h3>Info utili:</h3>
+
+        <ol>
+            <li>Numeri utili di emergenza</li>
+            <ul>
+                <li><strong>999&nbsp;</strong>-&nbsp;Emergenza</li>
+                <li><strong>101&nbsp;</strong>-&nbsp;Numero polizia</li>
+                <li><strong>111&nbsp;</strong>-&nbsp;Numero assistenza medica</li>
+            </ul>
+            <li>Hotel</li>
+            <ul>
+                <li><strong>Nome hotel</strong>:&nbsp;Buckingham Palace</li>
+                <li><strong>Indirizzo hotel</strong>:&nbsp;Westminster, London SW1A 1AA, Regno Unito</li>
+            </ul>
+            <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di Andata</strong>:&nbsp;Y1234X, ore 9:30 da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno</strong>:&nbsp;Y1236X, ore 18:30 da London Heathrow</li>
+            </ul>
+        </ol>
         <hr>
     </main>
 
