[FINISHED] Added Footer code

--- a/index.html
+++ b/index.html
@@ -90,5 +90,10 @@
     </main>
 
     <!-- Footer -->
+    <footer>
+        <h3>Le foto</h3>
+        <img src="./img/london-400x400-compressor_0.jpeg" alt="london">
+        <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpeg" alt="evening-tower-bridge-and-river">
+    </footer>
 </body>
 </html>
