--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -69,22 +71,29 @@
         <h3>Info utili:</h3>
 
         <ol>
-            <li>Numeri utili di emergenza</li>
-            <ul>
-                <li><strong>999&nbsp;</strong>-&nbsp;Emergenza</li>
-                <li><strong>101&nbsp;</strong>-&nbsp;Numero polizia</li>
-                <li><strong>111&nbsp;</strong>-&nbsp;Numero assistenza medica</li>
-            </ul>
-            <li>Hotel</li>
-            <ul>
-                <li><strong>Nome hotel</strong>:&nbsp;Buckingham Palace</li>
-                <li><strong>Indirizzo hotel</strong>:&nbsp;Westminster, London SW1A 1AA, Regno Unito</li>
-            </ul>
-            <li>Aereo</li>
-            <ul>
-                <li><strong>Volo di Andata</strong>:&nbsp;Y1234X, ore 9:30 da Milano Malpensa</li>
-                <li><strong>Volo di Ritorno</strong>:&nbsp;Y1236X, ore 18:30 da London Heathrow</li>
-            </ul>
+            <li>
+                <p>Numeri utili di emergenza</p>
+                <ul>
+                    <li><strong>999&nbsp;</strong>-&nbsp;Emergenza</li>
+                    <li><strong>101&nbsp;</strong>-&nbsp;Numero polizia</li>
+                    <li><strong>111&nbsp;</strong>-&nbsp;Numero assistenza medica</li>
+                </ul>
+            </li>
+            <li>
+                <p>Hotel</p>
+                <ul>
+                    <li><strong>Nome hotel</strong>:&nbsp;Buckingham Palace</li>
+                    <li><strong>Indirizzo hotel</strong>:&nbsp;Westminster, London SW1A 1AA, Regno Unito</li>
+                </ul>
+            </li>
+
+            <li>
+                <p>Aereo</p>
+                <ul>
+                    <li><strong>Volo di Andata</strong>:&nbsp;Y1234X, ore 9:30 da Milano Malpensa</li>
+                    <li><strong>Volo di Ritorno</strong>:&nbsp;Y1236X, ore 18:30 da London Heathrow</li>
+                </ul>
+            </li>
         </ol>
         <hr>
     </main>
@@ -93,7 +102,9 @@
     <footer>
         <h3>Le foto</h3>
         <img src="./img/london-400x400-compressor_0.jpeg" alt="london">
-        <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpeg" alt="evening-tower-bridge-and-river">
+        <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpeg"
+            alt="evening-tower-bridge-and-river">
     </footer>
 </body>
+
 </html>
