--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
     <footer>
         <h3>Le foto</h3>
         <img src="./img/london-400x400-compressor_0.jpeg" alt="london">
-        <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpeg"
-            alt="evening-tower-bridge-and-river">
+        <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpeg" alt="evening-tower-bridge-and-river">
     </footer>
 </body>
 
